--- a/README
+++ b/README
@@ -4,7 +4,8 @@ users/             A directory containing user logins as YAML
 profiles/          A directory of profile page content as YAML
 
 routes.php         The routes in Slim
-functions.php      All of the PHP functions - there's really not much here
+
+lib/               All of the PHP functions
 
 public/            A folder containing all public assets - this is used as the document root
     index.php
