--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ Start with...?
   x  create example view/template from "template" property
   x  allow setting things in JSON
   o  make editing page
-  o  base64 the title for safety
+  o  hex encode the title for safety
     
   o  create "dashboard" template
   o  list templates with edit and delete buttons
