--- a/TODO
+++ b/TODO
@@ -5,8 +5,9 @@ Start with...?
   x  view single page
   x  create example view/template from "template" property
   x  allow setting things in JSON
+  x  hex encode the title for safety
+  x  make template listing page
   o  make editing page
-  o  hex encode the title for safety
     
   o  create "dashboard" template
   o  list templates with edit and delete buttons
