verify if JSON is correct before saving

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 
-  o  Verify JSON when creating templates
+  x  Verify JSON when creating templates
 
   o  Add some documentation to the templates page
   o  Add image upload capabilities
