--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
 
   x  Verify JSON when creating templates
+  x  Add image upload capabilities
 
-  o  Add some documentation to the templates page
-  o  Add image upload capabilities
-  o  Make users only able to access their own pages
+  /  Documentation on templates update (added, show/hide needed)
+  o  Page editing: verify that the user has access
+  o  User listing and updating
+  o  User password reset
 
   --
 
@@ -11,3 +13,4 @@
 
   o  Rename *_x to *_create_update
   o  Move main templates into templates/app and others into templates/custom
+  o  Add whitelabels back and allow subdomain matching to set the theme
